--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI = mongodb+srv://jacobkee:950905jksj@cluster0.kcixd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ATLAS_URI = mongodb+srv://jacobkee:950905jksj@cluster0.kcixd.mongodb.net/JKSJ_DApp?retryWrites=true&w=majority
